--- a/P3_ProgramacionAvanzada/P1_HolaMundo_JorgeXucla.vcxproj
+++ b/P3_ProgramacionAvanzada/P1_HolaMundo_JorgeXucla.vcxproj
@@ -192,6 +192,11 @@
   <ItemGroup>
     <ResourceCompile Include="P3_ProgramacionAvanzada.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\Assets\EscenarioT.obj">
+      <FileType>Document</FileType>
+    </Text>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\nupengl.core.redist.0.1.0.1\build\native\nupengl.core.redist.targets" Condition="Exists('..\packages\nupengl.core.redist.0.1.0.1\build\native\nupengl.core.redist.targets')" />
