--- a/P3_ProgramacionAvanzada/P1_HolaMundo_JorgeXucla.vcxproj.filters
+++ b/P3_ProgramacionAvanzada/P1_HolaMundo_JorgeXucla.vcxproj.filters
@@ -63,9 +63,22 @@
     <ClCompile Include="ModelLoader.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Arma.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Bala.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Medicina.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Municion.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -116,6 +129,18 @@
     <ClInclude Include="resource.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Arma.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Bala.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Medicina.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Municion.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="P3_ProgramacionAvanzada.rc">
@@ -133,6 +158,9 @@
       <Filter>Archivos de recursos</Filter>
     </Text>
     <Text Include="..\Assets\Pistola.obj">
+      <Filter>Archivos de recursos</Filter>
+    </Text>
+    <Text Include="..\Assets\EscenarioT.obj">
       <Filter>Archivos de recursos</Filter>
     </Text>
   </ItemGroup>
