--- a/P3_ProgramacionAvanzada/P1_HolaMundo_JorgeXucla.vcxproj
+++ b/P3_ProgramacionAvanzada/P1_HolaMundo_JorgeXucla.vcxproj
@@ -203,6 +203,10 @@
       <FileType>Document</FileType>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <Object Include="..\Assets\Puntuacion.obj" />
+    <Object Include="..\Assets\Titulo.obj" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\nupengl.core.redist.0.1.0.1\build\native\nupengl.core.redist.targets" Condition="Exists('..\packages\nupengl.core.redist.0.1.0.1\build\native\nupengl.core.redist.targets')" />
