--- a/P3_ProgramacionAvanzada/P1_HolaMundo_JorgeXucla.vcxproj
+++ b/P3_ProgramacionAvanzada/P1_HolaMundo_JorgeXucla.vcxproj
@@ -132,23 +132,16 @@
     <ClCompile Include="Personaje.cpp" />
     <ClCompile Include="Bala.cpp" />
     <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="Cilindro.cpp" />
     <ClCompile Include="Color.cpp" />
-    <ClCompile Include="Cube.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="Medicina.cpp" />
+    <ClCompile Include="BalaPowerUp.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="ModelLoader.cpp" />
-    <ClCompile Include="Municion.cpp" />
-    <ClCompile Include="ObjetoRenderizable.cpp" />
     <ClCompile Include="P3_ProgramacionAvanzada.cpp" />
-    <ClCompile Include="Prisma.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Solid.cpp" />
     <ClCompile Include="Sphere.cpp" />
-    <ClCompile Include="Teapot.cpp" />
     <ClCompile Include="Text.cpp" />
-    <ClCompile Include="Toroide.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="Vector3D.cpp" />
   </ItemGroup>
@@ -161,23 +154,16 @@
     <ClInclude Include="Personaje.h" />
     <ClInclude Include="Bala.h" />
     <ClInclude Include="Camera.h" />
-    <ClInclude Include="Cilindro.h" />
     <ClInclude Include="Color.h" />
-    <ClInclude Include="Cube.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="Medicina.h" />
+    <ClInclude Include="BalaPowerUp.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="ModelLoader.h" />
-    <ClInclude Include="Municion.h" />
-    <ClInclude Include="ObjetoRenderizable.h" />
-    <ClInclude Include="Prisma.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Solid.h" />
     <ClInclude Include="Sphere.h" />
-    <ClInclude Include="Teapot.h" />
     <ClInclude Include="Text.h" />
-    <ClInclude Include="Toroide.h" />
     <ClInclude Include="Triangle.h" />
     <ClInclude Include="Vector3D.h" />
   </ItemGroup>
@@ -204,8 +190,12 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
-    <Object Include="..\Assets\Puntuacion.obj" />
-    <Object Include="..\Assets\Titulo.obj" />
+    <Text Include="..\Assets\Puntuacion.obj">
+      <FileType>Document</FileType>
+    </Text>
+    <Text Include="..\Assets\Titulo.obj">
+      <FileType>Document</FileType>
+    </Text>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
