Clase fileManager,  escritura y lectura del fichero, texto en pantalla de puntuaciones

--- a/P3_ProgramacionAvanzada/P1_HolaMundo_JorgeXucla.vcxproj
+++ b/P3_ProgramacionAvanzada/P1_HolaMundo_JorgeXucla.vcxproj
@@ -129,6 +129,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Enemigo.cpp" />
+    <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="Personaje.cpp" />
     <ClCompile Include="Bala.cpp" />
     <ClCompile Include="Camera.cpp" />
@@ -151,6 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Enemigo.h" />
+    <ClInclude Include="FileManager.h" />
     <ClInclude Include="Personaje.h" />
     <ClInclude Include="Bala.h" />
     <ClInclude Include="Camera.h" />
